POR/RefEdge/src/objects/Reference_Content__c.object
<CustomObject>
    <description>This object holds all the Custom Content.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Content</relationshipLabel>
        <relationshipName>Reference_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Social_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Social Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article_publication_date__c</fullName>
        <label>Article Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Associated_Accounts__c</fullName>
        <label>Associated Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attribute_Count__c</fullName>
        <description>Counts the number of content attributes tagged to a reference content.</description>
        <label>Attribute Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>    
	<fields> 
        <fullName>External_Source_Id__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>	
    <fields>
        <fullName>Attribute_Ids__c</fullName>
        <label>Attribute Ids</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <label>Attributes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Document__c</fullName>
        <description>Formula field to download &amp; open content files</description>
        <formula>IF(ISBLANK(Content_URL__c),
		IF(ISBLANK(Content_ID__c),
				&apos;No content found to open or download&apos;,
				HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;DownloadLinkPage?Id=&apos; + Id
					+ &apos;&amp;ContentId=&apos; + Content_ID__c,
					IMAGE(&quot;/resource/&quot; + $Setup.POR_App_Configuration__c.Namespace__c + &quot;DownloadImage&quot;, &quot;Download&quot;),
					&quot;_blank&quot;)),
		HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c + &apos;DownloadLinkPage?Id=&apos; + Id
					+ &apos;&amp;ContentURL=&apos; + Content_URL__c,
					IMAGE(&quot;/resource/&quot; + $Setup.POR_App_Configuration__c.Namespace__c + &quot;OpenImage&quot;, &quot;Open&quot;), &quot;_blank&quot;))</formula>
        <label>Content Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_File__c</fullName>
        <formula>IF(ISBLANK(Content_ID__c), &apos;No Content&apos;, HYPERLINK(&apos;/&apos;+Content_ID__c , &apos;View Content&apos;))</formula>
        <label>Content File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_ID__c</fullName>
        <label>Content ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Status__c</fullName>
        <label>Content Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Content_URL2__c</fullName>
        <label>Content URL 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_URL_Formula__c</fullName>
        <formula>IF(ISBLANK(Content_URL__c),
      &apos;&apos;,
      HYPERLINK(&apos;/apex/&apos; + $Setup.POR_App_Configuration__c.Namespace__c
                     + &apos;DownloadLinkPage?Id=&apos; + Id + &apos;&amp;ContentURL=&apos; + Content_URL__c + Content_URL2__c, 
                 Content_URL__c, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_URL__c</fullName>
        <label>Content URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Created_User_Name__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
        <label>Created User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Reference_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Reference Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Collector_Name__c</fullName>
        <label>Data Collector Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Collector_Status__c</fullName>
        <label>Data Collector Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Summary__c</fullName>
        <description>This field is used to display the summary for the reference content in the microsite.</description>
        <label>Microsite Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Featured_Content__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Featured Content</description>
        <inlineHelpText>Featured content items appear at the top of the Reference Content search results. Users may choose to see only Featured content by filtering on this Reference Content Type. The Featured setting is managed manually.</inlineHelpText>
        <label>Featured Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_File_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Library_ID__c</fullName>
        <label>Library ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Microsite_Clicks__c</fullName>
        <inlineHelpText>Number of times recipients have clicked on this particular content item in a Microsite.</inlineHelpText>
        <label>Microsite Clicks</label>
        <summarizedField>Invitation_ReferenceContent__c.Visits_clicks__c</summarizedField>
        <summaryForeignKey>Invitation_ReferenceContent__c.Reference_Content__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Download__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Count for each time a user clicks the [Download] button in RefSearch or on the Reference Content details page, downloads the content from Microsite Preview, or a recipient clicks the content and downloads it from the Microsite.</inlineHelpText>
        <label>Number of Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Invitations__c</fullName>
        <inlineHelpText>Number of Invitations this particular content item has been included in.</inlineHelpText>
        <label>Number of Invitations</label>
        <summaryForeignKey>Invitation_ReferenceContent__c.Reference_Content__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Ratings__c</fullName>
        <inlineHelpText>Number of times recipients have submitted a rating from a Microsite for this particular content item.</inlineHelpText>
        <label>Number of Ratings</label>
        <summaryFilterItems>
            <field>Invitation_ReferenceContent__c.Rating__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invitation_ReferenceContent__c.Rating__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Invitation_ReferenceContent__c.Reference_Content__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reminders_Sent__c</fullName>
        <label>Number of Reminders Sent</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppAccount__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Opportunity Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName +&quot; &quot;+ Opportunity__r.Owner.LastName</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Content</relationshipLabel>
        <relationshipName>Reference_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication_name__c</fullName>
        <label>Publication Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Content Rating</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Content_Open_Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Specific to link type Reference Content. Count for each time the Open button is clicked from Ref Search, the &quot;Content Document&quot; [Open] button is clicked on the Ref Content Detail Page or the &quot;Content URL&quot; field is clicked from the Ref Content Detail page.</inlineHelpText>
        <label>Open Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_Content_View_Details_Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Count for each time the &quot;View Details&quot; button is clicked for Reference Content from the Reference Content icon pop-up on the Ref Search page.</inlineHelpText>
        <label>View Details Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Content_Type_Name__c</fullName>
        <label>Reference Content Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Content_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Content Type</label>
        <referenceTo>Reference_Content_Type__c</referenceTo>
        <relationshipLabel>Reference Content</relationshipLabel>
        <relationshipName>Reference_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Content_Type_f__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+Reference_Content_Type__c,  Reference_Content_Type__r.Name__c )</formula>
        <label>Reference Content Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Terms_keywords__c</fullName>
        <label>Search Terms (keywords)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substitute_Account_Name__c</fullName>
        <label>Substitute Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>4200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Reference Content</label>
    <listViews>
        <fullName>Active_Content</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Reference_Content_Type_Name__c</columns>
        <columns>Language__c</columns>
        <columns>Content_Status__c</columns>
        <columns>Allow_Social_Sharing__c</columns>
        <columns>Internal_Use__c</columns>
        <columns>Content_File__c</columns>
        <columns>Content_ID__c</columns>
        <columns>Attributes__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Content_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Content</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Reference_Content_Type_f__c</columns>
        <columns>Reference_Content_Type_Name__c</columns>
        <columns>Content_File__c</columns>
        <columns>Content_Status__c</columns>
        <columns>Language__c</columns>
        <columns>Attributes__c</columns>
        <columns>Associated_Accounts__c</columns>
        <columns>Internal_Use__c</columns>
        <columns>Custom_Reference_Content__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Featured_Content</fullName>
        <columns>NAME</columns>
        <columns>Reference_Content_Type__c</columns>
        <columns>Title__c</columns>
        <columns>Content_Status__c</columns>
        <columns>Content_URL__c</columns>
        <columns>Custom_Reference_Content__c</columns>
        <columns>Featured_Content__c</columns>
        <columns>Internal_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Featured_Content__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Featured Content</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ratings</fullName>
        <columns>NAME</columns>
        <columns>Reference_Content_Type_Name__c</columns>
        <columns>Rating__c</columns>
        <columns>Number_of_Ratings__c</columns>
        <columns>Number_of_Invitations__c</columns>
        <columns>Number_of_Download__c</columns>
        <columns>Microsite_Clicks__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <label>ratings</label>
    </listViews>
    <nameField>
        <displayFormat>RC-{0000000000}</displayFormat>
        <label>Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>